
8.73  2021-02-05
  - Removed finally keyword from check function in Mojo::Exception.
  - Changed arguments of check function in Mojo::Exception to be easier to use with Perl 5.34 try/catch.
  - Removed experimental status from any, map, timer and timeout methods in Mojo::Promise.
  - Removed experimental status from extname method in Mojo::File.
  - Removed experimental status from load_classes function in Mojo::Loader.
  - Removed experimental status from Mojo::DynamicMethods. Still summons old gods, use at your own risk!
  - Added silent attribute to Mojo::Server::Morbo.

8.72  2021-01-26
  - Deprecated Mojo::UserAgent::local_address in favor of Mojo::UserAgent::socket_options.
  - Deprecated local_address option of connect method in Mojo::IOLoop::Client in favor of socket_options.
  - Deprecated tls_protocols option of connect method in Mojo::IOLoop::Client in favor of tls_options.
  - Deprecated tls_verify option of connect method in Mojo::IOLoop::Client in favor of tls_options.
  - Deprecated tls_protocols option of negotiate method in Mojo::IOLoop::TLS in favor of tls_options.
  - Deprecated tls_ciphers option of negotiate method in Mojo::IOLoop::TLS in favor of tls_options.
  - Deprecated tls_verify option of negotiate method in Mojo::IOLoop::TLS in favor of tls_options.
  - Deprecated tls_version option of negotiate method in Mojo::IOLoop::TLS in favor of tls_options.
  - Deprecated tls_ciphers option of listen method in Mojo::IOLoop::Server in favor of tls_options.
  - Deprecated tls_verify option of listen method in Mojo::IOLoop::Server in favor of tls_options.
  - Deprecated tls_version option of listen method in Mojo::IOLoop::Server in favor of tls_options.
  - Added support for trusted reverse proxies. (jberger)
  - Added network_contains function to Mojo::Util. (jberger)
  - Added trusted_proxies attribute to Mojo::Server and Mojo::Message::Request. (jberger)
  - Added socket_options method to Mojo::UserAgent.